--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
   <!-- Custom styles for this template -->
-  <link href="tridelta.css" rel="stylesheet">
+  <link href="aboutus.css" rel="stylesheet">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet" type='text/css'>
@@ -31,142 +31,142 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
-
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <div id="menu" class="navbar navbar-default navbar-custom">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
-      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link " href="aboutus.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recruitment.html">Recruitment</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="events.html">Events</a>
-          </li>
-        </ul>
-      </div>
+<!-- Navigation -->
+  <div class="container">
+    <img class="logo" src="./images/LOGO.png">
 
-      <div class ="mx-auto order-0">
-        <a class ="navbar-brand mx-auto" href ="index.html">
-          <img src ="images/logo.png" class ="logo-margin w3-hover-opacity" width="100" alt="logo thing">
-        </a>
-        <button class ="navbar-toggler" type ="button" data-toggle="collapse" data-target= ".dual-collapse2">
-          <span class ="navbar-toggler-icon"></span>
-        </button>
-      </div>
-
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="leadership.html">Leadership</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sisterhood.html">Sisterhood</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="philanthropy.html">Philanthropy</a>
-          </li>
-        </ul>
-      </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar10">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbar10">
+                <ul class="navbar-nav nav-fill w-100">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Our Chapter
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="aboutus.html">About Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                    </li>
+                   <!--  <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About Us</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="philanthropy.html">Philanthropy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="leadership.html">Leadership</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-  </div>
 
+
+  <!-- BANNER IMAGE-->
 
   <div class="banner">
-    <img class="banner-image" src="images/banner-2.jpeg">
-    <div class="banner-text">
-      <p> About Us </p>
-    </div>
+    <img class="banner-image" src="./images/homepage.png">
   </div>
 
   <!-- Page Content -->
   <div class="container w3-padding-64">
-    <div class = "w3-container w3-center"> </div>
+    <!--<div class = "headerstyle container w3-center tagline"> 
+      <h1 style="color:#d9d9d9">Authentic  Genuine  DownToEarth</h1>
+    </div> -->
 
-    <div class="w3-container w3-center w3-mobile" style = "padding-top: 20px">
-      <h6>National History</h6>
-    </div>
+
     <!-- Row 1 -->
-    <div class="w3-cell-row w3-padding-48 w3-mobile">
+    <div class="w3-cell-row w3-mobile">
 
       <!-- column 1 -->
       <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
 
         <div class="w3-container w3-mobile" style = "padding-bottom: 20px">
+      <h1 class="w3-center title-padding" style="padding-bottom:50px">What is Tri Delta?</h1>
 
-         It started with friendship...
-         <br><br>Although there were three women's groups represented at Boston University in 1888, seniors Sarah Ida Shaw and Eleanor Dorcas Pond saw a need for a different organization that would "be kind alike to all and think more of the girl's inner self and character than of her personal appearance." Not only did these two young women create the framework of our organization, but they also created its Rituals and symbols, wrote its constitution and designed its emblems. All was finished on Thanksgiving Eve 1888 when the two embraced each other and declared "Tri Delta is founded." Their vision has grown into the dynamic women's organization we know today.
+         <p class= "subtitle-padding text-color" style="padding-bottom:20px">A home away from home...</hp>
+         <p class="paragraph-style">Tri Delta is represented in hundreds of collegiate chapters throughout the US. Our Gamma Lambda chapter at UCSD is founded on a platform of <b>leadership, perpetual bonds of friendship, and a womanly character</b>. It is best described by its sisters as a <b>"home away from home"</b>, a comfortable place where love, respect, and support can always be found. </p>
 
        </div>
      </div>
 
      <!-- column 2 -->
-     <div class="w3-container w3-cell w3-mobile" style="width:30%; padding-top:50px; padding-right:10px">
+     <div class="w3-cell w3-mobile w3-hover-shadow" style="width:30%;">
 
-      <!-- Vice President card -->
-      <div class="w3-card-4">
-        <img src="images/founder1.png" class = "w3-sepia-min" style = "width:100%" alt="about-us-1">
-
-      </div>
+        <img src="images/about-us/our-story.jpg" style = "width:100%" alt="about-us-1">
+        <p class="w3-panel" style="line-height:1.6em">"Our individual sisters are never defined by our chapter; rather, it is the quality and diversity of our sisters that define us."</p>
     </div>
   </div>
 
+    <!-- Row 2 -->
+    <div class="w3-cell-row w3-padding-48 w3-mobile">
 
+      <!-- column 1 -->
+      <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
+        <div class="w3-container w3-mobile" style = "padding-bottom: 20px">
+          <h1 class="w3-center title-padding" style="padding-bottom:50px">Our Diverse Group</h1>
+         <p class="paragraph-style">Our chapter contains women involved in all majors, various campus organizations, as well as representatives of UCSD's Student Councils and Associated Students. We have ladies pursuing careers as future doctors, lawyers, teachers, environmental and social advocates, conservationists, political leaders, and so much more. With an Officer's Council of over 20 sisters, our chapter provides many opportunities for leadership positions and involvement, helping our women grow and become strong leaders in their workplace and communities. </p>
+       </div>
+     </div>
 
-
-  <!-- Row 2 -->
-  <div class = "w3-container w3-center"> </div>
-
-  <div class="w3-container w3-center w3-mobile" style = "padding-top: 20px">
-    <h6>Chapter History</h6>
-  </div>
-
-  <!-- Row 1 -->
-  <div class="w3-cell-row w3-padding-48 w3-mobile">
-
-    <!-- column 1 -->
-    <div class="w3-container w3-cell w3-mobile" style="width:30%; padding-top:50px; padding-right:10px">
-
-      <!-- Vice President card -->
-      <div class="w3-card-4">
-        <img src="images/founder1.png" class = "w3-sepia-min" style = "width:100%" alt="about-us-1">
-      </div>
-
-    </div>
-
-    <!-- column 2 -->
-    <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
-
-      <div class="w3-container w3-mobile" style = "padding-bottom: 20px">
-
-        <br><br>As one of the world's largest National Panhellenic Conference sororities, Tri Delta is represented in hundreds of collegiate chapters throughout the US. Our Gamma Lambda chapter at UCSD is founded on a platform of leadership, perpetual bonds of friendship, and a womanly character. It is best described by its sisters as a "home away from home," a comfortable place where love, respect, and support can always be found. A recent alumna once said, "Our individual sisters are never defined by our chapter; rather, it is the quality and diversity of our sisters that define us." Our chapter contains women involved in all majors, various campus organizations, as well as representatives of UCSD's Student Councils and Associated Students. We have ladies pursuing careers as future doctors, lawyers, teachers, environmental and social advocates, conservationists, political leaders, and so much more. With an Officer's Council of over 20 sisters, our chapter provides many opportunities for leadership positions and involvement, helping our women grow and become strong leaders in their workplace and communities. 
-      </div>
+     <!-- column 2 -->
+     <div class="w3-cell w3-mobile w3-center" style = "width:30%">
+        <img src="images/about-us/about-us-4.jpg" style = "width:100%" alt="about-us-2">
+        <div style= "padding-bottom:5px;"></div>
+        <img src="images/about-us/about-us-5.jpg"  style = "width:100%" alt="about-us-3">
     </div>
   </div>
 
-    <div class="w3-container w3-center w3-mobile" style = "padding-top: 20px">
-      <h6>Symbols & Emblems</h6>
-    </div>
-  <div class="w3-content w3-display-container">
+    <!-- Row 2 -->
+    <div class="w3-cell-row w3-padding-48 w3-mobile">
 
-    <div class="mySlides">
+      <!-- column 1 -->
+          <h1 class="w3-center title-padding" style="padding-bottom:50px"> History of Tri Delta</h1>
+          <img src="images/about-us/history.jpg" style = "width:100% " alt="about-us-2">
+
+         <p class="paragraph-style" style= "padding-top:20px">Tri Delta was founded by women for women. Ours is a remarkable story, and Tri Delta is proud to share a sisterhood created by brave, bold and kind women who were looking to be themselves and belong to something bigger – something distinctive, something dynamic and something worthy of the best in them. <br> Although there were three women's groups represented at Boston University in 1888, seniors Sarah Ida Shaw and Eleanor Dorcas Pond saw a need for a different organization that would "be kind alike to all and think more of the girl's inner self and character than of her personal appearance."</p>
+     </div>
+
+    <div class="w3-center w3-mobile">
+      <h1 class="w3-center title-padding" style="padding-bottom:80px"> Symbols & Emblems </h1> 
+
+    </div>
+
+  <div class="w3-content w3-display-container" style="padding-top: 50px">
+
+    <div class=" mySlides">
+      <div class="w3-container w3-center">
+        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center padding-left: 50px">
+          <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
+      </div>
       <div class="w3-center">
-        <img src="images/pansy.png" class = "w3-center" style="width:20%; text-align:center">
+        <img src="images/aboutlogo.png" class = "w3-center" style="width:30%; text-align:center">
           The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
       </div>
       <div class="w3-center">
-        <img src="images/logo.png" class = "w3-center" style="width:30%; text-align:center">
-          The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
-      </div>
-      <div class="w3-center">
-        <img src="images/pansy.png" class = "w3-center" style="width:20%">
+        <img src="images/pansy.png" class = "w3-center" style="width:100%">
         The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
       </div>
       <div class="w3-center">
@@ -178,6 +178,9 @@
         The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
       </div>
     </div>
+  </div>
+</div>
+
 
 <!--    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
@@ -204,7 +207,6 @@ function showDivs(n) {
 </script> -->
 
 
-</div>
 
 <!--FOOTER START -->   
 <footer class="py-3" style="background-color:#FEA17E">
