--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home</title>
+  <title>FAQ</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -16,7 +16,19 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
+  <link href="philanthropy.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
+
+  <style>
+  .title {
+  text-align: center;
+  margin-top: 5%;
+  font-size:2.25em;
+  color: #FFBFB7;
+  font-weight: bold;
+  font-family: 'Petit Formal Script', cursive;
+}
+</style>
 
 </head>
 
@@ -33,7 +45,7 @@
             </button>
             <div class="navbar-collapse collapse" id="navbar10">
                 <ul class="navbar-nav nav-fill w-100">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,15 +53,17 @@
                         Our Chapter
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="aboutus.html">About Us</a>
-                        <a class="dropdown-item" href="leadership.html">Leadership</a>
-                      </div>
+                        <a class="dropdown-item" href="FAQ.html">F.A.Q.</a>
                     </li>
                    <!--  <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="recruitment.html">Recruitment</a>
+                    <li class="nav-item dropdown active">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Recruitment
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
@@ -57,9 +71,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="leadership.html">Leadership</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
@@ -72,55 +83,29 @@
   <!-- BANNER IMAGE-->
 
   <div class="banner">
-    <img class="banner-image" src="./images/homepage.png">
+    <img class="banner-image" src="./images/events.png">
   </div>
 
-  <!-- Page Content -->
-  <div class="container welcome">
-    <div class="welcome-title">
-      Welcome to Our Chapter
-    </div>
+    <!-- Page Content -->
 
-    Tri Delta is an assembly of women with shared values where you can be yourself and belong to something bigger. We are <b>brave</b>, <b>bold</b> and <b>kind</b>. We are passionate about serving others, committed to becoming the best version of ourselves and dedicated to helping women <b>Live</b>, <b>Learn</b> and <b>Lead</b> – with Purpose – for a lifetime.
-  </div>
+<h1 class = "title">
+Frequently Asked Questions
+</h1>
 
-  <!-- IMAGE GALLERY -->
-  <section class="cards">
-    <article>
-      <img class="article-img" src="./images/homepage/img1.png" alt=" " />
-    </article>
-    <article>
-      <img class="article-img" src="./images/homepage/img2.jpg" alt=" " />
-    </article>
-    <article>
-      <img class="article-img" src="./images/homepage/img3.jpg" alt=" " />
-    </article>
-    <article>
-      <img class="article-img" src="./images/homepage/img4.jpg" alt=" " />
-    </article>
-    <article>
-      <img class="article-img" src="./images/homepage/img5.jpg" alt=" " />
-    </article>
-    <article>
-      <img class="article-img" src="./images/homepage/img6.jpg" alt=" " />
-    </article>
-  </section>
- </div>
-
+</div> <!-- CLOSING CONTAINER -->
 
   <!--FOOTER START -->   
   <footer class="py-3 foot" style="background-color:#FFBFB7">
    <div class="container">
     <div class="row">
-
        <!-- Contacts Us-->
       <div class="col-sm-4 contact">
         <div class="contact-us">
             Contact Us!
-          </div>
-          <div class="vppr-email">
+        </div>
+        <div class="vppr-email">
             ucsd.ddd.vppr@gmail.com
-          </div>
+        </div>
       </div>
 
       <!-- Social Media Icons-->
@@ -146,27 +131,11 @@
       </div>
 
       <div class="col-sm-4 chapter">
-        <!-- <div class="login">
-          <div class="footer-text">
-            GINsystem Log In
-          </div>
-          <div class="ginsystem-login">
-            <form action="https://app.ginsystem.us/login" method="post" target="blank">
-              <input type="hidden" name="parent_group" value="ddd">
-              <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-              <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-              <button type="submit" class="btn btn-default gin-login">Log In</button>
-            </form>
-          </div>
-          <div class="forgot">
-            <a href="https://imis.tridelta.org/dddimis/DDDMembers/recover-password" target="_blank">Can't Login?</a>
-          </div>
-        </div>
-      </div> -->
       Gamma Lambda Chapter 
       University of California, San Diego
-    </div>
+      </div>
    </div>
+ </div>
   <div class="copy-right"><!--row-->
     &copy; 2018 Delta Delta Delta, Gamma Lambda all rights reserved.​
   </div>
