--- a/phil3.html
+++ b/phil3.html
@@ -3,153 +3,102 @@
 
 <head>
   <title>Philanthropy</title>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Handlee|Euphoria+Script" rel="stylesheet" type='text/css'>
   <!-- Custom styles for this template -->
-  <!-- <link href="css/modern-business.css" rel="stylesheet"> -->
-  <link href="tridelta.css" rel="stylesheet">
-
-
-  <!-- Social Media Icons-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-  <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
-
-  <!-- test caro -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <style>
-  /* Make the image fully responsive */
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
-</style>
-</head> 
-
-<!-- test caro -->
+  <link href="philanthropy.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
 
 </head>
-<style>
-.carousel-inner img {
-  width: 100%;
-  height: 100%;
-}
-.full-container{
-  margin-right: -2000px;
-  margin-left: -2000px;
-}
-.full-content{
-  padding-left: 2000px;
-  padding-right: 2000px;
-}
 
-.full-padding{
-  padding-top: 150px;
-  padding-bottom:150px;
-}
-/* Make the image fully responsive */
-.carousel-inner img {
-  width: 100%;
-  height: 100%;
-}
-</style>
 
 <body>
-
-  <!-- Navigation -->
-  <div id="menu" class="navbar navbar-default navbar-custom">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
-      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav mr-auto" >
-          <li class="nav-item">
-            <a class="nav-link" href="aboutus.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recruitment.html">Recruitment</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">Events</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="index.html">
-          <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="leadership.html">Leadership</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sisterhood.html">Sisterhood</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="philanthropy.html">Philanthropy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Page Content -->
-  <div class="banner">
-    <img class="banner-image" src="./images/events/spiritnight.jpg">
-    <div class="banner-text">
-      <p>Philanthropy</p>
-    </div>
-  </div>
-
-  <!-- Page Content -->
-
+<!-- Navigation -->
   <div class="container">
-    <!-- Page Heading/Breadcrumbs -->
+    <img class="logo" src="./images/LOGO.png">
 
-    <div class="container" style="margin-bottom:5em">
-      <p style="font-family:cursive;font-size:3.2vw;margin-top:2em;margin-bottom:2em"> <i>"The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served."</i><p> 
-    <div>
-        <div class="row" style="margin-bottom:5em">
-          <div class="col-lg-8">
-            <div class = "sister-title">
-              St. Jude Children's Research Hospital
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar10">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbar10">
+                <ul class="navbar-nav nav-fill w-100">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Our Chapter
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="aboutus.html">About Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                      </div>
+                    </li>
+                   <!--  <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About Us</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="philanthropy.html">Philanthropy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="leadership.html">Leadership</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                </ul>
             </div>
-            <div class = "sister-body">
+        </div>
+    </nav>
+
+
+  <!-- BANNER IMAGE-->
+
+  <div class="banner">
+    <img class="banner-image" src="./images/philanthropy/philbanner.png">
+  </div>
+
+    <!-- Page Content -->
+      <p style="font-family:cursive;font-size:3.2vw;margin-top:2em;margin-bottom:2em"> <i>"The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served."</i><p> 
+
+
+
+        <div class="row" style="margin-bottom:5%">
+          <div class="col-lg-8">
+            <div class = "title-style">
+              <b><i>St. Jude Children's Research Hospital</i></b>
+            </div>
+            <div class = "body-style">
               <b>Do something that matters.</b>
               Since the early 1970s Tri Delta’s chosen philanthropy has been children’s cancer charities. In 1999, Tri Delta formed a national philanthropic partnership with St. Jude Children’s Research Hospital to support their mission of finding cures and saving children.
             </div>
-            
           </div>
           <div class ="col-lg-4">
             <div id="demo" class="carousel slide" data-ride="carousel">
-
               <!-- Indicators -->
               <ul class="carousel-indicators">
                 <li data-target="#demo" data-slide-to="0" class="active"></li>
                 <li data-target="#demo" data-slide-to="1"></li>
                 <li data-target="#demo" data-slide-to="2"></li>
               </ul>
-
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -162,7 +111,6 @@
                   <img src="./images/sisterhood/dd2.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
-
               <!-- Left and right controls -->
               <a class="carousel-control-prev" href="#demo" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
@@ -173,15 +121,15 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <div>
-        <div class="row" style="margin-bottom:5em">
+        <hr class="style">
+
+        <div class="row" style="margin-bottom:5%;margin-top:5%">
           <div class="col-lg-8 order-md-12">
-            <div class = "sister-title"> 
-              Delta Idol
+            <div class = "title-style"> 
+              <b><i>Delta Idol</i></b>
             </div>
-            <div class = "sister-body">
+            <div class = "body-style">
               <b>Love to sing?</b>
               Every year, we host a a fun talent show, where all the sororities and fraternities perform in a singing competition! This campaign is our most successful event across the nation and raises the most amount of money for St. Jude.
             </div>
@@ -219,13 +167,17 @@
             </div>
           </div>
         </div>
+
+        <hr class="style">
+
+
         <div class = "philanthropy-section-ext">
-          <div class="row">
+          <div class="row" style="margin-top:5%;margin-bottom:5%">
             <div class="col-lg-8">
-              <div class = "sister-title">
-                External Philanthropy
+              <div class = "title-style">
+                <b><i>External Philanthropy</i></b>
               </div>
-              <div class = "sister-body">
+              <div class = "body-style">
                 <b>Give back to your community.</b>
                 We take as much pride in our support of other fraternities and sororities as we do with our own. As sisters of TriDelta, we participate in external events hosted by other members of the Greek community to help raise money and awareness for their organizations.
               </div>
@@ -266,75 +218,68 @@
             <!-- CAROUSEL END HERE-->
           </div>
         </div>
-      </div>
-    </div>
-  </div> <!--  CONTAINER -->
-</body>
+ </div> <!-- CLOSING CONTAINER -->
 
-<!--FOOTER START -->   
-<footer class="py-3" style="background-color:#FEA17E">
-  <div class="container"">
+  <!--FOOTER START -->   
+  <footer class="py-3 foot" style="background-color:#FFBFB7">
+   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
-        <div class="footer-text1">
-          Delta Delta Delta 
-          <br> 
-          <div class="gamma-lambda">
-            Gamma Lambda 
-          </div>
-          University of California,
-          <br>
-          San Diego
+       <!-- Contacts Us-->
+      <div class="col-sm-4 contact">
+        <div class="contact-us">
+            Contact Us!
         </div>
-      </div>
-
-      <div class="col-sm-4 login">
-        <div class="footer-text" >
-          GINsystem Log In
-        </div>
-        <div class="ginsystem-login">
-          <form action="https://app.ginsystem.us/login" method="post" target="blank">
-            <input type="hidden" name="parent_group" value="ddd">
-            <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-            <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-            <div style="text-align:center"><button type="submit" class="btn btn-default gin-login">Log In</button></div>
-          </form>
+        <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
         </div>
       </div>
 
       <!-- Social Media Icons-->
-      <div class="col-sm-4">
-        <div class="footer-text2">Follow UCSD Tri Delta</div>
+      <div class="social col-sm-4">
+        <div class="footer-text2">
+          Follow UCSD Tri Delta
+        </div>
         <div class="social-media">
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-pinterest-p"></i>
-          <i class="fab fa-tumblr"></i>
-          <i class="fab fa-twitter"></i>
+          <a href="https://www.instagram.com/trideltaucsd/">
+            <i class="fab ho fa-instagram"></i>
+          </a>
+          <a href="https://www.facebook.com/ucsdtridelta/">
+            <i class="fab ho fa-facebook-f"></i>
+          </a>
+          <i class="fab ho fa-pinterest-p"></i>
+          <a href="http://ucsdtridelta.tumblr.com/">
+            <i class="fab ho fa-tumblr"></i>
+          </a>
+          <a href="https://twitter.com/dddatucsd">
+            <i class="fab ho fa-twitter"></i>
+          </a>
         </div>
-        <div class="contact-us">
-          Contact Us!
-        </div>
-        <div class="vppr-email">
-          ucsd.ddd.vppr@gmail.com
-        </div>
-      </div><!--col-sm-4-->
-    </div> <!--row-->
+      </div>
 
-    <div class="copy-right"><!--row-->
-      &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
-    </div>
-
-  </div> <!--container-->
-</footer>
-<!-- FOOTER END -->
+      <div class="col-sm-4 chapter">
+      Gamma Lambda Chapter 
+      University of California, San Diego
+      </div>
+   </div>
+ </div>
+  <div class="copy-right"><!--row-->
+    &copy; 2018 Delta Delta Delta, Gamma Lambda all rights reserved.​
+  </div>
+  </footer>
+  <!-- FOOTER END -->
+ 
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+<!-- Social Media Icons-->
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
+<script type="text/javascript" src="slick/slick.min.js"></script>
+
+
+</body>
 
 </html>
-
-
